NetBSD Problem Report #44661

From www@NetBSD.org  Tue Mar  1 20:14:33 2011
Return-Path: <www@NetBSD.org>
Received: from mail.netbsd.org (mail.netbsd.org [204.152.190.11])
	by www.NetBSD.org (Postfix) with ESMTP id 39E7C63B8E0
	for <gnats-bugs@gnats.NetBSD.org>; Tue,  1 Mar 2011 20:14:33 +0000 (UTC)
Message-Id: <20110301201431.A79FC63B8CE@www.NetBSD.org>
Date: Tue,  1 Mar 2011 20:14:31 +0000 (UTC)
From: pooka@iki.fi
Reply-To: pooka@iki.fi
To: gnats-bugs@NetBSD.org
Subject: msdosfs rename has sprung a vnode leek
X-Send-Pr-Version: www-1.0

>Number:         44661
>Category:       kern
>Synopsis:       msdosfs rename has sprung a vnode leek
>Confidential:   no
>Severity:       serious
>Priority:       medium
>Responsible:    kern-bug-people
>State:          closed
>Class:          sw-bug
>Submitter-Id:   net
>Arrival-Date:   Tue Mar 01 20:15:01 +0000 2011
>Closed-Date:    Sun May 01 03:14:56 +0000 2011
>Last-Modified:  Sun May 01 03:14:56 +0000 2011
>Originator:     Antti Kantee
>Release:        
>Organization:
>Environment:
>Description:
tests/fs/vfs/t_vnops:msdosfs_rename_dir now fails with EBUSY.
It seems the msdosfs rename code has developed a vnode leak.

The test used to pass, but was disabled because it failed
with "out of stack space" in some environments.  I retested
it today and re-enabled it because it now fails
even without the new subtest I committed today.

(the "Check failed" below looks like another unrelated bug)
>How-To-Repeat:
run msdosfs_rename_dir from tests/fs/vfs/t_vnops:

src/tests/fs/vfs> ./t_vnops msdosfs_rename_dir
*** Check failed: t_vnops.c:296: sb.st_nlink != 3

==== dumping mountpoint at ``/mnt'' ====

vnodecovered = 0xbb695620 syncer = 0x0 data = 0xbb6b1160
fs_bshift 12 dev_bshift = 9
flag = 0x1000<MNT_LOCAL>
iflag = 0x80<IMNT_HAS_TRANS>
refcnt = 3 unmounting @ 0xbb771024 updating @ 0xbb771900
statvfs cache:
        bsize = 4096
        frsize = 4096
        iosize = 4096
        blocks = 1239
        bfree = 1239
        bavail = 1239
        bresvd = 0
        files = 512
        ffree = 0
        favail = 0
        fresvd = 0
        f_fsidx = { 0xc500, 0x764f }
        owner = 0
        namemax = 255
        flag = 0x0
        syncwrites = 30
        asyncwrites = 4
        syncreads = 132
        asyncreads = 0
        fstypename = msdos
        mntonname = /mnt
        mntfromname = /dev/device0.msdosfs
locked vnodes =
all vnodes = 0xbb695218, 0xbb69541c

== dumping vnodes ==

VM OBJECT at 0xbb695218, refs 1
VNODE flags 0x0
mp 0xbb771000 numoutput 0 size 0x1000 writesize 0x1000
data 0xbb6c5d90 writecount 0 holdcnt 0
tag VT_MSDOSFS(4) type VDIR(2) mount 0xbb771000 typedata 0x0
v_lock 0xbb6952b8
clean bufs:
dirty bufs:
VM OBJECT at 0xbb69541c, refs 1
VNODE flags 0x1<ROOT>
mp 0xbb771000 numoutput 0 size 0x4000 writesize 0x4000
data 0xbb6c5d14 writecount 0 holdcnt 0
tag VT_MSDOSFS(4) type VDIR(2) mount 0xbb771000 typedata 0x0
v_lock 0xbb6954bc
clean bufs:
dirty bufs:

==== done ====

failed: unmount failed: Device busy
>Fix:

>Release-Note:

>Audit-Trail:
From: "Antti Kantee" <pooka@netbsd.org>
To: gnats-bugs@gnats.NetBSD.org
Cc: 
Subject: PR/44661 CVS commit: src/tests/fs/vfs
Date: Tue, 1 Mar 2011 20:16:34 +0000

 Module Name:	src
 Committed By:	pooka
 Date:		Tue Mar  1 20:16:33 UTC 2011

 Modified Files:
 	src/tests/fs/vfs: t_vnops.c

 Log Message:
 msdosfs xfail for PR kern/44661


 To generate a diff of this commit:
 cvs rdiff -u -r1.19 -r1.20 src/tests/fs/vfs/t_vnops.c

 Please note that diffs are not public domain; they are subject to the
 copyright notices on the relevant files.

From: "Antti Kantee" <pooka@netbsd.org>
To: gnats-bugs@gnats.NetBSD.org
Cc: 
Subject: PR/44661 CVS commit: src/tests/fs/vfs
Date: Thu, 3 Mar 2011 11:01:27 +0000

 Module Name:	src
 Committed By:	pooka
 Date:		Thu Mar  3 11:01:27 UTC 2011

 Modified Files:
 	src/tests/fs/vfs: t_renamerace.c

 Log Message:
 The re-enabled renamerace test also triggers the recent msdosfs
 vnode leak.  xfail this under the blanket of PR kern/44661.


 To generate a diff of this commit:
 cvs rdiff -u -r1.19 -r1.20 src/tests/fs/vfs/t_renamerace.c

 Please note that diffs are not public domain; they are subject to the
 copyright notices on the relevant files.

From: "Juergen Hannken-Illjes" <hannken@netbsd.org>
To: gnats-bugs@gnats.NetBSD.org
Cc: 
Subject: PR/44661 CVS commit: src
Date: Sat, 19 Mar 2011 20:05:21 +0000

 Module Name:	src
 Committed By:	hannken
 Date:		Sat Mar 19 20:05:21 UTC 2011

 Modified Files:
 	src/sys/fs/msdosfs: msdosfs_vnops.c
 	src/tests/fs/vfs: t_vnops.c

 Log Message:
 Remove a vnode reference leak from msdosfs_rename. Release tdvp if either
 doscheckpath() or relookup() fails.

 Adjust test fs/vfs/t_vnops.c and remove the link count test for msdos.

 Fixes PR #44661


 To generate a diff of this commit:
 cvs rdiff -u -r1.72 -r1.73 src/sys/fs/msdosfs/msdosfs_vnops.c
 cvs rdiff -u -r1.21 -r1.22 src/tests/fs/vfs/t_vnops.c

 Please note that diffs are not public domain; they are subject to the
 copyright notices on the relevant files.

State-Changed-From-To: open->closed
State-Changed-By: dholland@NetBSD.org
State-Changed-When: Sun, 01 May 2011 03:14:56 +0000
State-Changed-Why:
fixed, thanks


>Unformatted:

NetBSD Home
NetBSD PR Database Search

(Contact us) $NetBSD: query-full-pr,v 1.39 2013/11/01 18:47:49 spz Exp $
$NetBSD: gnats_config.sh,v 1.8 2006/05/07 09:23:38 tsutsui Exp $
Copyright © 1994-2007 The NetBSD Foundation, Inc. ALL RIGHTS RESERVED.